thanh style guide

--- a/raww/web/css/source/_styleguide.less
+++ b/raww/web/css/source/_styleguide.less
@@ -280,6 +280,7 @@
     text-align: center;
     display: inline-block;
     &-name {
+      margin-top: -5px;
       text-transform: uppercase;
     }
   }
