--- a/raww/Magento_Catalog/web/css/source/_listing.less
+++ b/raww/Magento_Catalog/web/css/source/_listing.less
@@ -33,8 +33,32 @@
         padding: 50px 0 0 0;
         .category-icons{
             margin: 0 28px;
+            &:ntn-nth(5n+1){
+                margin: 0 50px;
+            }
         }
     }
 }
 
 // ---------------min 768px-------------------------
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
+    //none list
+    .modes {
+        display: none;
+    }
+    .page-layout-1column
+    {
+        .filter.block {
+            border-top: none;
+        }
+        .toolbar-products {
+            position: unset;
+            width: 100%;
+        }
+        .filter-content {
+            margin-top: 0px;
+            width: 70%;
+            float: left;
+        }
+    } 
+}
