--- a/raww/Magento_Catalog/layout/catalog_category_view.xml
+++ b/raww/Magento_Catalog/layout/catalog_category_view.xml
@@ -16,9 +16,9 @@
             </container>
         </referenceContainer>
         <referenceContainer name="page.wrapper">
-            <block class="Magento\Catalog\Block\Category\View" name="category-banner" before="main.content" template="Magento_Catalog::banner_category.phtml"/>
-            <referenceContainer name="main.content">
-             <block class="Magento\Catalog\Block\Category\View" name="category-icons" before="-" template="Magento_Catalog::icons_category.phtml"/>
+            <block class="Magento\Catalog\Block\Category\View" name="category-banner" before="category-icons" template="Magento_Catalog::banner_category.phtml"/>
+             <block class="Magento\Catalog\Block\Category\View" name="category-icons" before="main.content" template="Magento_Catalog::icons_category.phtml"/>
+            <referenceContainer name="main.content">  
             </referenceContainer>
         </referenceContainer>
         <referenceBlock name="page.main.title">
