--- a/raww/Magento_Catalog/templates/product/list.phtml
+++ b/raww/Magento_Catalog/templates/product/list.phtml
@@ -59,8 +59,28 @@ $_helper = $this->helper(Magento\Catalog\Helper\Output::class);
                        class="product photo product-item-photo"
                        tabindex="-1">
                         <?= $productImage->toHtml() ?>
+                        <?php //Atrribute sale or order?>
+              
+              <?php
+                      
+                      $product_new = $_product->getResource()->getAttribute('product_new');
+                      $product_new   = $product_new->getFrontend()->getValue($_product);
+                      $class = $product_new?"product-new":"product_null";
+                      echo "<div class=$class>" . $product_new . "</div>";
+                      // if($product_new)
+                      // {
+                      //     $class = ;   
+                      // }
+                      // else{
+
+                      // }                        
+                    
+                      ?>
                     </a>
+
+                   
                     <div class="product details product-item-details">
+                   
                         <?php
                             $_productNameStripped = $block->stripTags($_product->getName(), null, true);
                         ?>
@@ -91,10 +111,12 @@ $_helper = $this->helper(Magento\Catalog\Helper\Output::class);
                                             <input type="hidden" name="<?= /* @noEscape */ Action::PARAM_NAME_URL_ENCODED ?>"
                                                    value="<?= /* @noEscape */ $postParams['data'][Action::PARAM_NAME_URL_ENCODED] ?>">
                                             <?= $block->getBlockHtml('formkey') ?>
+
+                                            <div class="adjust-button"><button class="button-adjust minus" type="button">- </button> <input class="input-adjust" type="number" value="1"  name="qty" maxlength="12" minlength="1" data-validate="null"> <button class="button-adjust add" type="button">+</button></div>
                                             <button type="submit"
-                                                    title="<?= $block->escapeHtmlAttr(__('Add to Cart')) ?>"
+                                                    title="<?= $block->escapeHtmlAttr(__('Add to Bag')) ?>"
                                                     class="action tocart primary">
-                                                <span><?= $block->escapeHtml(__('Add to Cart')) ?></span>
+                                                <span><?= $block->escapeHtml(__('Add to Bag')) ?></span>
                                             </button>
                                         </form>
                                     <?php else :?>
