--- a/raww/web/css/source/_theme.less
+++ b/raww/web/css/source/_theme.less
@@ -27,6 +27,7 @@
 @font-size-14:  14px;
 @font-size-13:  13px;
 @font-size-12:  12px;
+@font-size-11:  11px;
 @font-size-10:  10px;
 
 @font-weight-800: 800;
