--- a/raww/web/css/source/_typography.less
+++ b/raww/web/css/source/_typography.less
@@ -84,10 +84,10 @@
 //  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
-    h1 {
-        .lib-css(font-size, @h1__font-size-desktop);
-        .lib-css(margin-bottom, @h1__margin-bottom__desktop);
-    }
+    // h1 {
+    //     .lib-css(font-size, @h1__font-size-desktop);
+    //     .lib-css(margin-bottom, @h1__margin-bottom__desktop);
+    // }
 }
 
 //
