--- a/raww/web/css/source/lib/variables/_colors.less
+++ b/raww/web/css/source/lib/variables/_colors.less
@@ -9,6 +9,7 @@
 @button__color-raw: #30241a;
 @button__color-raw__hover: #221912;
 @button__color-hollow: #e9d5d2;
+@border__color-icon-category: #eeeeee;
 @color-ede: #ededed;
 @color-322: #31251c;
 @color-625: #62544d;
