--- a/raww/web/css/source/_buttons.less
+++ b/raww/web/css/source/_buttons.less
@@ -44,7 +44,8 @@
     }
     .hollow-button {
         .lib-button(
-            @_button-color: @color-black,
+            @_button-font-family: @font-family__avenir-roman,
+            @_button-color: @button__color-raw,
             @_button-background: @color-white,
             @_button-border: 2px solid @button__color-hollow,
             @_button-color-hover: @color-black,
