--- a/raww/web/css/source/lib/variables/_colors.less
+++ b/raww/web/css/source/lib/variables/_colors.less
@@ -23,6 +23,10 @@
 @color-e16: #e16044;
 @color-e168: #e16857;
 
+@color-header_top-text: #31251c;
+@color-header_top-mobile: #e1cfcd;
+@color-footer_top-bg: #ead5d3;
+@color-header_top-bg: #e9d5d2;
 //message
 @color-green-message: #68c524;
 @color-red-validate: #ed1313;
