--- a/raww/web/css/source/_theme.less
+++ b/raww/web/css/source/_theme.less
@@ -29,6 +29,8 @@
 @font-size-12:  12px;
 @font-size-11:  11px;
 @font-size-10:  10px;
+@font-size-19: 19px;
+@font-size-23: 23px;
 
 @font-weight-800: 800;
 
@@ -36,6 +38,7 @@
 @line-height-15: 15px;
 @line-height-16: 16px;
 @line-height-20: 20px;
+
 @line-height-24: 24px;
 @line-height-28: 28px;
 @line-height-42: 42px;
