--- a/raww/Magento_Catalog/web/css/source/_listing.less
+++ b/raww/Magento_Catalog/web/css/source/_listing.less
@@ -1,5 +1,7 @@
+//
+//  banner mixin
+//  _____________________________________________
 
-//-----------------------------mixin--------------------------//
 .banner-category(@margin-top, @margin-left, @margin-bottom-title, @font-size-title, @line-height, @width-dis, @font-size-dis, @line-height-dis) {
     .banner-category{
         &-text{
@@ -26,18 +28,34 @@
     }
   }
 
+//
+//  Common
+//  _____________________________________________
+
 & when(@media-common = true){
-    //========================================banner category=================================//
+    
+    //
+    //  banner
+    //  _____________________________________________
+
     .banner-category{
         background-image: url('@{baseDir}images/banner_category.png');
     }
-    //========================================list icon=======================================//
+    
+    //
+    //  list icon 
+    //  _____________________________________________
+
       .icons-category{
         border-bottom: 1px solid @border__color-icon-category;
         display: flex;
         justify-content: center;
     }
-    //========================================toolbar=========================================//
+
+    //
+    //  toolbar
+    //  _____________________________________________
+
     .toolbar{
         &-amount {
         position: relative;
@@ -47,16 +65,19 @@
             position: absolute;
         }
     }
-    select {
-        background-color: transparent;
-        box-shadow: none;
+        select {
+            background-color: transparent;
+            box-shadow: none;
+        }
     }
-}
     .sorter-action {
         display: none;
     }
 
-    //========================================List product====================================//
+    //
+    //  list product
+    //  _____________________________________________
+
     .page-layout-1column .products ~ .toolbar-products {
         display: none;
     }  
@@ -129,7 +150,11 @@
         color: #30241c;
         font-family: @font-family__avenir-roman;
     }
-    //========================================Swatches color=================================//
+   
+    //
+    //  Swatch color
+    //  _____________________________________________
+
     .swatch-attribute.color {
         margin-bottom: 16px;
     .swatch-attribute-options{
@@ -205,21 +230,29 @@
     }
 
 }
+
 //
-//  Desktop (style-l.css)
+//  Desktop
 //  _____________________________________________
 
-// ---------------min 1440px-------------------------
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__xl) {
-     //========================================Swatches color==========================//
+   
+    //
+    // banner
+    //  _____________________________________________
+
     .banner-category{
         .banner-category(19.1%, 11.3%, 18px, 100px, 80px, 31%, 18px, 31px);
     }
-    //========================================toolbar=================================//
+    
+    //
+    //  product
+    //  _____________________________________________
+
     .page-layout-1column{     
         .toolbar{
             &-amount {
-            padding: 11px 0 0 132px;
+            padding: 11px 0 0 126px;
             margin: 0;
             &::after{
                 margin-left: 28px;
@@ -232,24 +265,40 @@
     } 
    
 }
-//---------------min 1024px-------------------------
+
+//
+//  Desktop
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__l) {
-    //========================================Banner=================================//
+    
+    //
+    //  banner
+    //  _____________________________________________
+
     .banner-category{
         height: 540px;
         .banner-category(26%, 8%, 18px, 100px, 80px, 47%, 18px, 31px);
     }
-    //========================================Toolbar=================================//
+    
+    //
+    //  Toolbar
+    //  _____________________________________________
+
     .page-layout-1column{     
         .toolbar-products {
             width: 35%;
         }
     } 
-    //========================================Product=================================//
+
+    //
+    //  Product
+    //  _____________________________________________
+
     .page-products .products-grid .product-items {
         width: 101%;
     }
-     .page-products.page-layout-1column .products-grid .product-item {
+    .page-products.page-layout-1column .products-grid .product-item {
         margin-top: -30px;
         margin-bottom: 4px;
         padding: 0;
@@ -290,37 +339,71 @@
         }
     }
 }
-// // ---------------min 768px-------------------------
+
+//
+//  Desktop
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
-    //========================================banner=================================//
+   
+    //
+    //  Banner
+    //  _____________________________________________
+
     .banner-category{
         height: 360px;
         .banner-category(22%, 4%, 18px, 100px, 80px, 60%, 18px, 31px);
     }
-    //========================================list icon=================================//
+    
+    //
+    //  List icon
+    //  _____________________________________________
+
       .icons-category{
         .category-icons{
-            padding: 51px 27px 12px 26px;
+          
+            &:nth-child(1){
+                margin: 51px 42px 12px 0px;
+            }
+            &:nth-child(2){
+                margin: 51px 27px 12px 16px;
+            }
+            &:nth-child(3){
+                margin: 51px 20px 0px 17px;
+            }
+            &:nth-child(4){
+                margin: 51px 28px 12px 26px;
+            }
+            &:nth-child(5){
+                margin: 51px 4px 0px 33px;
+            }
         }
     }
-    //========================================toolbar=================================//
+    
+    //
+    //  toolobar
+    //  _____________________________________________
+
     .modes {
         overflow: hidden;
         display: none;
     }    
     .page-layout-1column{     
         .toolbar-products {
-            // position: unset;
             width: 42%;
             display: inline-block;
             margin: 0;
             padding-top: 15px;
-            // .toolbar-amount{
-            //     margin: 5px 0 0 0;
-            // }
         }
     } 
-    //========================================Product=================================//
+    .sorter-options {
+        margin: 0;
+    }
+    
+    //
+    //  Product
+    //  _____________________________________________
+
     .page-products .products-grid .product-items {
         width: 100%;
     }
@@ -328,7 +411,6 @@
         padding: 0;
         width: 49%;
         max-width: 400%;
-        // margin: -30px 0 4px 0;
         margin-top: 0;
         &:nth-child(2n+1){
             margin-right: 1%;
@@ -341,7 +423,7 @@
         padding: 0 0 95px 0;
     }
     .product-item .price-box {
-        margin: 2px 0 8px 5px;
+        margin: 0px 0 10px 4px;
         .price{
             font-size: 18px;
         }
@@ -369,19 +451,31 @@
    
 }
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__s) {
-    //========================================Banner=================================//
-      .banner-category{
+    
+    //
+    //  Banner
+    //  _____________________________________________
+
+    .banner-category{
         height: 360px;
         .banner-category(22%, 4%, 18px, 100px, 80px, 75%, 18px, 31px);
     }
-    //========================================List color=============================//
-      .icons-category{
+    
+    //
+    //  List icon
+    //  _____________________________________________
+
+    .icons-category{
         .category-icons{
-            padding: 51px 10px 12px 10px;
+            margin: 51px 10px 12px 10px;
            
         }
     }
-    //========================================Toolbar================================//
+    
+    //
+    //  Toolbar
+    //  _____________________________________________
+
     .toolbar-amount {
         display: flex;
         justify-content: center;
@@ -389,14 +483,17 @@
             margin-right: 5px;
         }
     }
-    //========================================Product================================//
+    
+    //
+    //  Product
+    //  _____________________________________________
+
     .product-item-actions .actions-primary + .actions-secondary {
         display: none;
     }
     .products-grid .product-item-info:not(:hover):not(.active) .product-item-inner {
         margin: 0 0 50px 0;
     }
-    //tắt hover
     .products-grid .product-item-info:hover, .products-grid .product-item-info.active {
         box-shadow: unset;
         border: unset;
@@ -406,9 +503,6 @@
     .products-grid .product-item-actions {
         margin: 0;
     }
-    // .page-products .products-grid .product-items {
-    //     width: 100%;
-    // }
     .page-products.page-layout-1column .products-grid .product-item {
         padding: 0;
         width: 49%;
@@ -430,11 +524,15 @@
 
 
 //
-//  Mobile (styles-m.css)
-//  _______________________________________________________________________________________
+//  Mobile @screen__m
+//  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
-    //========================================Toolbar================================//
+    
+    //
+    //  toolbar
+    //  _____________________________________________
+
     .toolbar select {
         margin: 18px 9px;
     }
@@ -475,20 +573,37 @@
         }
     } 
 }
+
+//
+//  Mobile @screen__s
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__s) {
-    //========================================Banner=================================//
+    
+    //
+    //  Banner
+    //  _____________________________________________
+
     .banner-category{
         height: 360px;
         .banner-category(22%, 4%, 18px, 100px, 80px, 75%, 18px, 31px);
     }
-    //========================================List color==============================//
-      .icons-category{
+   
+    //
+    //  List icon
+    //  _____________________________________________
+
+    .icons-category{
         .category-icons{
             padding: 51px 10px 12px 10px;
            
         }
     }
-    //========================================Toolbar================================//
+   
+    //
+    //  Toolbar
+    //  _____________________________________________
+
     .toolbar select {
         margin: 18px 9px;
     }
@@ -499,7 +614,11 @@
             margin-right: 5px;
         }
     }
-    //========================================Product================================//
+        
+    //
+    //  list product
+    //  _____________________________________________
+
     .product-item-actions .actions-primary + .actions-secondary {
         display: none;
     }
@@ -550,20 +669,35 @@
             font-size: 16px;
         }
     } 
-     //========================================Swatchés================================//
+    
+    //
+    //  swatch color
+    //  _____________________________________________
      .swatch-attribute.color{
         display: none;
     }
 }
-// ---------------max 480px-------------------------
+
+//
+//  Mobile @screen__xs
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__xs) {
-    //========================================Banner================================//
+    
+    //
+    //  banner
+    //  _____________________________________________
+
     .banner-category{
         height: 340px;
         .banner-category(46%, 4%, 5px, 54px, 80px, 80%, 16px, 22px);
     }
-    //========================================List icon=============================//
-     .icons-category{
+   
+    //
+    //  list icon
+    //  _____________________________________________
+
+    .icons-category{
         .category-icons{
             padding: 51px 18px 12px 18px;
             img{
@@ -585,6 +719,7 @@
     }
     .toolbar select {
         margin: 18px 0px;
+       
     }
     .sorter-options {
         padding: 0 6px 0 10px;
