--- a/raww/Magento_Catalog/web/css/source/_listing.less
+++ b/raww/Magento_Catalog/web/css/source/_listing.less
@@ -235,6 +235,10 @@
 //  Desktop
 //  _____________________________________________
 
+//
+//  Desktop large
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__xl) {
    
     //
@@ -267,7 +271,7 @@
 }
 
 //
-//  Desktop
+//   Desktop Tablet
 //  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__l) {
@@ -339,11 +343,6 @@
         }
     }
 }
-
-//
-//  Desktop
-//  _____________________________________________
-
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
    
     //
@@ -524,7 +523,7 @@
 
 
 //
-//  Mobile @screen__m
+//  Mobile
 //  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
@@ -573,11 +572,6 @@
         }
     } 
 }
-
-//
-//  Mobile @screen__s
-//  _____________________________________________
-
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__s) {
     
     //
@@ -677,10 +671,6 @@
         display: none;
     }
 }
-
-//
-//  Mobile @screen__xs
-//  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__xs) {
     
