--- a/raww/web/css/source/lib/variables/_colors.less
+++ b/raww/web/css/source/lib/variables/_colors.less
@@ -14,6 +14,7 @@
 @color-322: #31251c;
 @color-625: #62544d;
 @color-hover-icon: #4f4035;
+@color-3024: #30241c;
 @color-999: #999;
 @color-9c9: #9c9c9c;
 @color-312: #31241b;
@@ -22,6 +23,8 @@
 @color-bf9: #bf948a;
 @color-e16: #e16044;
 @color-e168: #e16857;
+@color-222: #222;
+@color-e8d: #e8d5d2;
 
 @color-header_top-text: #31251c;
 @color-header_top-mobile: #e1cfcd;
